--- a/package.json
+++ b/package.json
@@ -9,14 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/vision": "^3.42.1",
+    "next": "14.2.3",
+    "next-sanity": "^7.1.4",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.3"
+    "react-hot-toast": "^2.4.1",
+    "react-icon": "^1.0.0",
+    "react-icons": "^5.2.1",
+    "sanity": "^3.42.1",
+    "styled-components": "^6.1.11",
+    "tailwind-scrollbar": "^3.1.0"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.3"
+    "eslint-config-next": "14.2.3",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   }
 }
